--- a/templates/main/pages/oneliner_comment.html
+++ b/templates/main/pages/oneliner_comment.html
@@ -35,8 +35,8 @@
     
     <div class="form-actions">
 	{% include 'main/elements/please_login.html' %}
-	<input class="btn btn-primary" type="submit" name="submit" value="Post"/>
-	<a class="btn" href="{{ next_url }}">Cancel</a>
+	<button class="btn btn-primary" type="submit" name="submit" value="Post">Post</button>
+	<button class="btn"><a href="{{ next_url }}">Cancel</a></button>
     </div>
 </form>
 
