--- a/templates/main/pages/profile_edit.html
+++ b/templates/main/pages/profile_edit.html
@@ -44,8 +44,8 @@
 	
 	<div class="form-actions">
 	    {% include 'main/elements/please_login.html' %}
-	    <input type="submit" name="action" value="Save" class="btn btn-primary"/>
-	    <a class="btn" href="{{ next_url }}">Cancel</a>
+	    <button type="submit" name="action" class="btn btn-primary" value="Save">Save</button>
+	    <button class="btn"><a href="{{ next_url }}">Cancel</a></button>
 	</div>
     </div>
 </form>
