--- a/templates/main/elements/question_edit_form.html
+++ b/templates/main/elements/question_edit_form.html
@@ -32,8 +32,8 @@
 
 	<div class="form-actions">
 	    {% include 'main/elements/please_login.html' %}
-	    {% for action in form.actions %}<input type="submit" name="action" value="{{ action.name }}" class="btn {{ action.cssclass }}"/>{% endfor %}
-	    <a class="btn" href="{{ next_url }}">Cancel</a>
+	    {% for action in form.actions %}<button type="submit" name="action" class="btn {{ action.cssclass }}" value="{{ action.name }}">{{ action.name }}</button>{% endfor %}
+	    <button class="btn"><a href="{{ next_url }}">Cancel</a></button>
 	</div>
     </div>
 </form>
