advanced search will show the search parameters when match was not found, otherwise it is hard to see if the ajax search worked or not

--- a/templates/main/pages/search.html
+++ b/templates/main/pages/search.html
@@ -21,7 +21,7 @@
     </div>
 </form>
 
-{% include 'main/elements/oneliners.html' %}
+{% include 'main/elements/oneliners_searchresults.html' %}
 
 {% endblock %}
 
