--- a/templates/main/elements/oneliners.html
+++ b/templates/main/elements/oneliners.html
@@ -2,6 +2,8 @@
     {% for oneliner in oneliners %}
     {% include 'main/elements/oneliner_with_related.html' %}
     {% empty %}
-    <div class="alert">No matching one-liners.</div>
+    {% block oneliners_empty %}
+    <div class="alert alert-block">No matching one-liners.</div>
+    {% endblock %}
     {% endfor %}
 </div>
