--- a/templates/main/pages/oneliner_edit.html
+++ b/templates/main/pages/oneliner_edit.html
@@ -31,7 +31,7 @@
 {% include 'main/elements/please_login.html' %}
 
 <ul>
-    <li>Please use the search box at the top to try to find a one-liner that may already exist for the same purpose.</li>
+    <li>Before you post, please do a quick search to confirm the one-liner does not exist yet.</li>
     <li>Please post only non-trivial and really useful, interesting or awesome one-liners.</li>
 </ul>
 
