made the nav-collapse work (on small screens)

--- a/templates/html5.html
+++ b/templates/html5.html
@@ -63,7 +63,7 @@
   <!-- JavaScript at the bottom for fast page loading -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="/media/js/jquery-1.7.1.min.js"><\/script>')</script>
   <script>document.write('<script src="/media/js/jquery-ui-1.8.17.custom.min.js"><\/script>')</script>
 
@@ -71,6 +71,7 @@
   <!-- scripts concatenated and minified via ant build script-->
   <script defer src="/media/js/plugins.js"></script>
   <script defer src="/media/js/django-jquery-csrf.js"></script>
+  <script defer src="/media/bootstrap/js/bootstrap.min.js"></script>
   <script defer src="/media/js/bashoneliners.js"></script>
   <!-- end scripts-->
 
