--- a/templates/main/pages/oneliner_edit.html
+++ b/templates/main/pages/oneliner_edit.html
@@ -33,6 +33,7 @@
 <ul>
     <li>Before you post, please do a quick search to confirm the one-liner does not exist yet.</li>
     <li>Please post only non-trivial and really useful, interesting or awesome one-liners.</li>
+    <li>The <strong>Explanation</strong> is very important. The purpose of this site is to teach, not to show off.</li>
 </ul>
 
 {% include 'main/elements/oneliner_edit_form.html' %}
