--- a/templates/main/pages/mission.html
+++ b/templates/main/pages/mission.html
@@ -14,10 +14,10 @@
 
 <dl class="mission">
     <dt>MISSION</dt>
-    <dd>Create a website for building up a collection of practical or just pure awesome bash one-liners or shell script tips and tricks for GNU Linux and similar systems. Open, collaborative system, user friendly, with functions to contribute one-liners, request one-liners, search, rss feed, commenting, Open ID login. Open-source project, using modern web technologies.</dd>
+    <dd>Create a website for building a collection of practical or just pure awesome bash one-liners or shell script tips and tricks with explanations for GNU Linux and similar systems. Open, collaborative system, user friendly, with functions to contribute one-liners, request one-liners, search, rss feed, commenting, Open ID login. Open-source project, using modern web technologies.</dd>
 
     <dt>OPPORTUNITIES</dt>
-    <dd>Knowledge exchange between bash gurus, fresh ideas by new contributors, education of users new to GNU Linux, coffee break entertainment. Also: "XYZOneLiners" &mdash; clone systems for the same purpose but different focus subject, such as jQueryOneLiners, AndroidOneLiners, or even ArduinoTips and GardeningHacks.
+    <dd>Knowledge exchange between bash gurus, fresh ideas by new contributors, education of users new to GNU Linux, coffee break entertainment. Also: "XYZOneLiners" &mdash; clone systems for the same purpose but different focus subject, such as jQueryOneLiners, AndroidOneLiners, ImageMagickOneLiners, or even ArduinoTips and GardeningHacks.
     </dd>
 
     <dt>AREAS OF COLLABORATION</dt>
