removed the bashoneliners. prefix when referencing modules internally

--- a/templates/main/elements/comment.html
+++ b/templates/main/elements/comment.html
@@ -3,7 +3,7 @@
 <blockquote>
     <p>{{ comment.comment|markdown:"safe" }}</p>
     <small>
-	by <a href="{% url bashoneliners.main.views.profile comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span> </a>
+	by <a href="{% url main.views.profile comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span> </a>
 	on <span>{{ comment.submit_date }}</span>
     </small>
 
@@ -11,7 +11,7 @@
     {% if model == 'oneliner' %}
     {% with comment.content_object as oneliner %}
     <div class="{{ model }}">
-	<h3 class="summary"><a href="{% url bashoneliners.main.views.oneliner oneliner.pk %}">{{ oneliner.summary|capfirst }}</a></h3>
+	<h3 class="summary"><a href="{% url main.views.oneliner oneliner.pk %}">{{ oneliner.summary|capfirst }}</a></h3>
 	<pre><span class="add-on">bash$ </span>{{ oneliner.line }}</pre>
     </div>
     {% endwith %}
