--- a/templates/main/elements/oneliner_edit_form.html
+++ b/templates/main/elements/oneliner_edit_form.html
@@ -20,22 +20,22 @@
 	
 	<h3>Explanation<span class="required">*</span></h3>
 	<div class="help-block">This is the most important field. Explain how the one-liner works as if you're teaching it to a good friend. No need to dissect word by word.
-	    <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url bashoneliners.main.views.help_markdown %}">markdown</a>.
+	    <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url main.views.help_markdown %}">markdown</a>.
 	</div>
 	<div class="input">
 	    <div class="error">{{ form.explanation.errors }}</div>
 	    <div class="explanation">{{ form.explanation }}</div>
-	    <p><a href="{% url bashoneliners.main.ajax.markdown %}" class="btn btn-info preview-markdown" data-source="id_explanation">Preview</a></p>
+	    <p><a href="{% url main.ajax.markdown %}" class="btn btn-info preview-markdown" data-source="id_explanation">Preview</a></p>
 	    <div id="id_explanation-preview"></div>
 	</div>
 	
 	<h3>Limitations (optional)</h3>
 	<div class="help-block">For example, if the one-liner might not work in some flavors of UNIX, etc.
-	    <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url bashoneliners.main.views.help_markdown %}">markdown</a>.
+	    <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url main.views.help_markdown %}">markdown</a>.
 	<div class="input">
 	    <div class="error">{{ form.limitations.errors }}</div>
 	    <div class="limitations">{{ form.limitations }}</div>
-	    <p><a href="{% url bashoneliners.main.ajax.markdown %}" class="btn btn-info preview-markdown" data-source="id_limitations">Preview</a></p>
+	    <p><a href="{% url main.ajax.markdown %}" class="btn btn-info preview-markdown" data-source="id_limitations">Preview</a></p>
 	    <div id="id_limitations-preview"></div>
 	</div>
 
