--- a/templates/main/pages/mission.html
+++ b/templates/main/pages/mission.html
@@ -28,6 +28,6 @@
 
 </dl>
 
-<p>If you are interested in joining this open-source project, head over to the <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> page.</p>
+<p>If you are interested in joining this open-source project, head over to the <a href="{% url main.views.sourcecode %}">source code</a> page.</p>
 
 {% endblock %}
