--- a/templates/main/elements/oneliner.html
+++ b/templates/main/elements/oneliner.html
@@ -3,16 +3,16 @@
 
     <div class="oneliner well oneliner-{{oneliner.pk}}">
 	<h3 class="summary">
-	    <a href="{% url bashoneliners.main.views.oneliner oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
+	    <a href="{% url main.views.oneliner oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
 	    {% if user == oneliner.user %}
-	    <a class="btn" href="{% url bashoneliners.main.views.oneliner_edit oneliner.pk %}"><i class="icon-pencil"></i>{% if not oneliner.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>
+	    <a class="btn" href="{% url main.views.oneliner_edit oneliner.pk %}"><i class="icon-pencil"></i>{% if not oneliner.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>
 	    {% endif %}
 	</h3>
 
 	<pre><span class="add-on">bash$ </span>{{ oneliner.line }}</pre>
 
 	<p class="author"><small>
-	&mdash; by <a href="{% url bashoneliners.main.views.profile oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.get_display_name }}</span></a>
+	&mdash; by <a href="{% url main.views.profile oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.get_display_name }}</span></a>
 	    on <span>{{ oneliner.created_dt }}</span>
 	</small></p>
 
@@ -29,13 +29,13 @@
 	{% endif %}
 
 	{% if user == question.user and not question.is_answered %}
-	<p><a href="{% url bashoneliners.main.ajax.question_answered question.pk oneliner.pk %}" class="btn btn-primary question-answered" data-parent="question-{{ question.pk }}">Accept this answer</a></p>
+	<p><a href="{% url main.ajax.question_answered question.pk oneliner.pk %}" class="btn btn-primary question-answered" data-parent="question-{{ question.pk }}">Accept this answer</a></p>
 	{% endif %}
 
 	{% if user.is_authenticated and not nobuttons %}
 	<p>
-	    <a href="{% url bashoneliners.main.views.oneliner_alternative oneliner.pk %}" class="btn">Post an alternative one-liner</a>
-	    <a href="{% url bashoneliners.main.views.oneliner_comment oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a>
+	    <a href="{% url main.views.oneliner_alternative oneliner.pk %}" class="btn">Post an alternative one-liner</a>
+	    <a href="{% url main.views.oneliner_comment oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a>
 	</p>
 	{% endif %}
 
@@ -49,7 +49,7 @@
 	    <div class="well comments {{ comments_expanded }}">
 	    {% render_comment_list for oneliner %}
 	    {% if user.is_authenticated and not nobuttons %}
-	    <p><a href="{% url bashoneliners.main.views.oneliner_comment oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a></p>
+	    <p><a href="{% url main.views.oneliner_comment oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a></p>
 	    {% endif %}
 	    </div>
 	</div>
