--- a/templates/main/pages/feeds.html
+++ b/templates/main/pages/feeds.html
@@ -8,14 +8,14 @@
 <p>The links below are RSS feed URLs which you can subscribe to using your favourite RSS reader.</p>
 
 <dl class="rss">
-    <dt><a href="{% url bashoneliners.main.feeds.oneliner %}"><span class="label label-info">RSS</span> One-Liners</a></dt>
+    <dt><a href="{% url main.feeds.oneliner %}"><span class="label label-info">RSS</span> One-Liners</a></dt>
     <dd>Recently posted bash one-liners.</dd>
 
-    <dt><a href="{% url bashoneliners.main.feeds.question %}"><span class="label label-info">RSS</span> Questions</a></dt>
+    <dt><a href="{% url main.feeds.question %}"><span class="label label-info">RSS</span> Questions</a></dt>
     <dd>Recently posted questions.</dd>
 
     <!--
-    <dt><a href="{% url bashoneliners.main.feeds.comment %}"><span class="label label-info">RSS</span> Comments</a></dt>
+    <dt><a href="{% url main.feeds.comment %}"><span class="label label-info">RSS</span> Comments</a></dt>
     <dd>Recently posted comments.</dd>
     -->
 </dl>
