--- a/templates/main/pages/profile.html
+++ b/templates/main/pages/profile.html
@@ -4,7 +4,7 @@
 
 {% block pagetitle %}{{ hacker.hackerprofile.get_display_name|default:'Anonymous' }}{% endblock %}
 
-{% block pageheader %}{{ hacker.hackerprofile.get_display_name|default:'Anonymous' }}{% if user == hacker %}<a href="{% url bashoneliners.main.views.profile_edit %}" class="btn"><i class="icon-pencil"></i></a>{% endif %}{% endblock %}
+{% block pageheader %}{{ hacker.hackerprofile.get_display_name|default:'Anonymous' }}{% if user == hacker %}<a href="{% url main.views.profile_edit %}" class="btn"><i class="icon-pencil"></i></a>{% endif %}{% endblock %}
 
 {% block content %}
 
@@ -34,7 +34,7 @@
 {% endwith %}
 
 {% if user == hacker %}
-<p><a href="{% url bashoneliners.main.views.question_new %}" class="btn btn-primary">Post a question</a></p>
+<p><a href="{% url main.views.question_new %}" class="btn btn-primary">Post a question</a></p>
 {% endif %}
 
 <h3>Questions asked (marked answered)</h3>
@@ -48,7 +48,7 @@
 {% include 'main/elements/oneliners.html' %}
 
 {% if user == hacker %}
-<p><a href="{% url bashoneliners.main.views.oneliner_new %}" class="btn btn-primary">Post a one-liner</a></p>
+<p><a href="{% url main.views.oneliner_new %}" class="btn btn-primary">Post a one-liner</a></p>
 {% endif %}
 
 <h3>Favourite one-liners</h3>
