--- a/templates/main/pages/sourcecode.html
+++ b/templates/main/pages/sourcecode.html
@@ -12,7 +12,7 @@
 
 <p>This is an open-source project. 
 If you would like to participate or contribute, 
-please read the <a href="{% url main.views.mission %}">mission statement</a> first, 
+please read the <a href="{% url oneliners.views.mission %}">mission statement</a> first, 
 it is the foundation of the project.
 If you are still interested, 
 please contact us via the mailing list at <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a>
