--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -4,7 +4,7 @@
 <blockquote>
     <p>{{ comment.comment|markdown:"safe" }}</p>
     <small>
-	by <a href="{% url main.views.profile comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span> </a>
+	by <a href="{% url oneliners.views.profile comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span> </a>
 	on <span>{{ comment.submit_date }}</span>
     </small>
 </blockquote>
