--- a/templates/main/pages/search.html
+++ b/templates/main/pages/search.html
@@ -47,7 +47,7 @@
 	    $('#search-errors').empty();
 
 	    var options = {
-		url: '{% url main.ajax.search %}',
+		url: '{% url oneliners.ajax.search %}',
 		type: 'get',
 		data: { 
 		    'is_advanced': 'on',
