improved preview by showing markdown format in real time

--- a/templates/html5.html
+++ b/templates/html5.html
@@ -72,6 +72,7 @@
   <script defer src="/media/js/plugins.js"></script>
   <script defer src="/media/js/django-jquery-csrf.js"></script>
   <script defer src="/media/bootstrap/js/bootstrap.min.js"></script>
+  <script defer src="/media/js/showdown.js"></script>
   <script defer src="/media/js/bashoneliners.js"></script>
   <!-- end scripts-->
 
