--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -243,6 +243,22 @@ h1 a.btn {
 }
 
 
+/* markdown preview */
+
+.preview {
+    border-color: #ddd;
+    background-color: whiteSmoke;
+    height: auto;
+    display: inline-block;
+    padding: 4px;
+    border: 1px solid #ccc;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    overflow: auto;
+}
+
+
 /* overriding bootstrap */
 
 pre code {
