updated source code info and made it a bit more "ergonomic"

--- a/templates/main/pages/sourcecode.html
+++ b/templates/main/pages/sourcecode.html
@@ -21,12 +21,12 @@ or privately at <a href="mailto:info@bashoneliners.com">info@bashoneliners.com</
 <dl class="sourcecode">
     <dt>Project homepage</dt>
     <dd>
-	<a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a>
+        <a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a>
     </dd>
 
     <dt>Task management, upcoming features</dt>
     <dd>
-	<a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
+        <a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
     </dd>
 
     <dt>Mailing list address</dt>
@@ -37,15 +37,18 @@ or privately at <a href="mailto:info@bashoneliners.com">info@bashoneliners.com</
 
     <dt>Get the source code</dt>
     <dd>
-	<pre># using Bazaar (master)
-bzr branch lp:bashoneliners
-
-# using Subversion (read-only mirror)
-svn checkout http://bashoneliners.googlecode.com/svn/trunk bashoneliners
-
-# using Git (mirror)
-git clone https://github.com/titan2x/bashoneliners.git
-</pre>
+        <p>We appreciate your contribution in any of these version control systems:</p>
+        <ul>
+            <li>Using Bazaar -- {{ "https://launchpad.net/bashoneliners"|urlize }}
+                <pre>bzr branch lp:bashoneliners</pre>
+            </li>
+            <li>Using Git -- {{ "https://github.com/janosgyerik/bashoneliners"|urlize }}
+                <pre>git clone https://github.com/janosgyerik/bashoneliners.git</pre>
+            </li>
+            <li>Using Subversion -- {{ "https://code.google.com/p/bashoneliners/"|urlize }}
+                <pre>svn checkout http://bashoneliners.googlecode.com/svn/trunk bashoneliners</pre>
+            </li>
+        </ul>
     </dd>
 
 </dl>
