--- a/oneliners/static/css/bashoneliners.css
+++ b/oneliners/static/css/bashoneliners.css
@@ -179,7 +179,7 @@ table.profile {
     cursor: pointer;
 }
 .comments-toggle img {
-    background: url(/media/images/arrows.png) no-repeat center;
+    background: url(/static/images/arrows.png) no-repeat center;
     background-position: 0px -81px;
     padding: 3px 14px;
     height: 26px;
