google analytics id to template

--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -87,7 +87,7 @@
 	
   <!-- Change UA-XXXXX-X to be your site's ID -->
   <script>
-    window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
+      window._gaq = [['_setAccount','{{ GOOGLE_ANALYTICS_ID }}'],['_trackPageview'],['_trackPageLoadTime']];
     Modernizr.load({
       load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
     });
