updated source code page

--- a/oneliners/templates/main/pages/sourcecode.html
+++ b/oneliners/templates/main/pages/sourcecode.html
@@ -21,7 +21,7 @@ or privately at <a href="mailto:info@bashoneliners.com">info@bashoneliners.com</
 <dl class="sourcecode">
     <dt>Project homepage</dt>
     <dd>
-        <a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a>
+        <a href="https://github.com/janosgyerik/bashoneliners">https://github.com/janosgyerik/bashoneliners</a>
     </dd>
 
     <dt>Task management, upcoming features</dt>
