--- a/oneliners/templates/main/pages/index.html
+++ b/oneliners/templates/main/pages/index.html
@@ -4,9 +4,9 @@
 
 {% block pageheader %}bashoneliners.com{% endblock %}
 
-{% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, linux, unix, vote, rank, rss, open-source, django, python, bazaar, launchpad, collaborate{% endblock %}
+{% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, linux, unix, vote, rank, rss, open-source, django, python, git, github, bazaar, launchpad, collaborate{% endblock %}
 
-{% block description %}A collection of practical or just pure awesome bash one-liners or shell script tips and tricks for GNU Linux, UNIX or BSD systems. Open, collaborative system, user friendly, with functions to contribute one-liners, request one-liners, search, rss feed, commenting, Open ID login. Open-source project, using Django, Python, jQuery, Bazaar, Launchpad, HTML5, Bootstrap from Twitter.{% endblock %}
+{% block description %}A collection of practical or just pure awesome bash one-liners or shell script tips and tricks for GNU Linux, UNIX or BSD systems. Open, collaborative system, user friendly, with functions to contribute one-liners, request one-liners, search, rss feed, commenting, Open ID login. Open-source project, using Django, Python, jQuery, Git, GitHub, Bazaar, Launchpad, HTML5, Bootstrap from Twitter.{% endblock %}
 
 {% block content %}
 
