added issue tracking link (github)

--- a/oneliners/templates/main/pages/sourcecode.html
+++ b/oneliners/templates/main/pages/sourcecode.html
@@ -24,6 +24,11 @@ or privately at <a href="mailto:info@bashoneliners.com">info@bashoneliners.com</
         <a href="https://github.com/janosgyerik/bashoneliners">https://github.com/janosgyerik/bashoneliners</a>
     </dd>
 
+    <dt>Issue tracking</dt>
+    <dd>
+        <a href="https://github.com/janosgyerik/bashoneliners/issues">https://github.com/janosgyerik/bashoneliners/issues</a>
+    </dd>
+
     <dt>Task management, upcoming features</dt>
     <dd>
         <a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
