--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -26,6 +26,9 @@
 		    <li><a href="{% url 'oneliners.views.oneliner_new' %}">Post</a>
 		    {% endif %}
 		    <li><a href="{% url 'oneliners.views.oneliner_list' %}">One-Liners</a></li>
+		    {% if user.is_authenticated %}
+		    <li><a href="{% url 'oneliners.views.question_new' %}">Ask</a>
+		    {% endif %}
 		    <li><a href="{% url 'oneliners.views.question_list' %}">Questions</a></li>
 		    <li><a href="{% url 'oneliners.views.feeds' %}">Feeds</a></li>
 		    <li><a href="{% url 'oneliners.views.sourcecode' %}">Source code</a></li>
