made question explanation field mandatory

--- a/oneliners/templates/main/elements/question_edit_form.html
+++ b/oneliners/templates/main/elements/question_edit_form.html
@@ -9,7 +9,7 @@
 	    <div class="summary">{{ form.summary }}</div>
 	</div>
 	
-	<h3>Explanation</h3>
+	<h3>Explanation<span class="required">*</span></h3>
 	<div class="help-block">Be specific. Try to use relevant keywords, so that the question is easier to find by search.</div>
 	<div class="input">
 	    <div class="error">{{ form.explanation.errors }}</div>
