--- a/oneliners/templates/main/pages/question_edit.html
+++ b/oneliners/templates/main/pages/question_edit.html
@@ -13,7 +13,7 @@
 {% include 'main/elements/please_login.html' %}
 
 <ul>
-    <li>Before you post, please a quick search to confirm there is no one-liner that answers your question.</li>
+    <li>Before you post, please do a quick search to confirm there is no one-liner that already answers your question.</li>
     <li>After you post a question, it will be listed on the <a href="{% url 'oneliners.views.question_list' %}">Questions</a> page, and other users can suggest (possibly many) one-liners that answer it.</li>
     <li>You can track your questions on your <a href="{% url 'oneliners.views.profile' %}">profile</a> page, and mark them <strong>Answered</strong> to remove them from the list of open questions.</li>
 </ul>
