--- a/oneliners/templates/oneliners/elements/oneliners_searchresults.html
+++ b/oneliners/templates/oneliners/elements/oneliners_searchresults.html
@@ -1,4 +1,4 @@
-{% extends 'main/elements/oneliners.html' %}
+{% extends 'oneliners/elements/oneliners.html' %}
 
 {% block oneliners_empty %}
     <div class="alert alert-block">
