--- a/oneliners/templates/oneliners/pages/comment_list.html
+++ b/oneliners/templates/oneliners/pages/comment_list.html
@@ -8,7 +8,7 @@
 {% if comments %}
 
 {% for comment in comments %}
-{% include 'main/elements/comment.html' %}
+{% include 'oneliners/elements/comment.html' %}
 {% endfor %}
 
 {% else %}
