--- a/oneliners/templates/oneliners/pages/oneliner.html
+++ b/oneliners/templates/oneliners/pages/oneliner.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% with 'expanded' as comments_expanded %}
-{% include 'main/elements/oneliners.html' %}
+{% include 'oneliners/elements/oneliners.html' %}
 {% endwith %}
 
 {% endblock %}
