--- a/oneliners/templates/oneliners/pages/question.html
+++ b/oneliners/templates/oneliners/pages/question.html
@@ -6,6 +6,6 @@
 
 {% block content %}
 
-{% include 'main/elements/questions.html' %}
+{% include 'oneliners/elements/questions.html' %}
 
 {% endblock %}
