--- a/oneliners/templates/oneliners/pages/question_list.html
+++ b/oneliners/templates/oneliners/pages/question_list.html
@@ -29,7 +29,7 @@ feel free to ask it here!</p>
 {% if questions %}
 <h2>Recent questions</h2>
 
-{% include 'main/elements/questions.html' %}
+{% include 'oneliners/elements/questions.html' %}
 
 {% endif %}
 
