--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -13,8 +13,8 @@
         <div class="help-block">Use a space around "|", single space after ";", UPPERCASE variable names, $() style subshells instead of ``</div>
         <div class="input input-prepend">
             <div class="error">{{ form.line.errors }}</div>
-            <div class="summary input-prepend">
-                <span class="add-on">bash$</span>
+            <div class="oneliner input-prepend">
+                <span class="add-on">&nbsp;$&nbsp;</span>
                 {{ form.line }}
             </div>
         </div>
